--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-description-file = README.rst
+description_file = README.rst
 long_description_content_type = text/x-rst
-license-file = LICENSE.txt
+license_file = LICENSE
 
 classifier = Development Status :: 4 - Beta
              Intended Audience :: Developers
